v2.2.0/reference/MinimalInformative.md
# Construct a Minimally Informative Prior

**\[stable\]**

This function constructs a minimally informative prior, which is
captured in a
[`LogisticNormal`](https://docs.crmpack.org/reference/LogisticNormal-class.md)
(or
[`LogisticLogNormal`](https://docs.crmpack.org/reference/LogisticLogNormal-class.md))
object.

Based on the proposal by Neuenschwander et al. (2008) , a minimally
informative prior distribution is constructed. The required key input is
the minimum (\\d\_{1}\\ in the notation of the Appendix A.1 of that
paper) and the maximum value (\\d\_{J}\\) of the dose grid supplied to
this function. Then `threshmin` is the probability threshold \\q\_{1}\\,
such that any probability of DLT larger than \\q\_{1}\\ has only 5%
probability. Therefore \\q\_{1}\\ is the 95% quantile of the beta
distribution and hence \\p\_{1} = 0.95\\. Likewise, `threshmax` is the
probability threshold \\q\_{J}\\, such that any probability of DLT
smaller than \\q\_{J}\\ has only 5% probability (\\p\_{J} = 0.05\\). The
probabilities \\1 - p\_{1}\\ and \\p\_{J}\\ can be controlled with the
arguments `probmin` and `probmax`, respectively. Subsequently, for all
doses supplied in the `dosegrid` argument, beta distributions are set up
from the assumption that the prior medians are linear in log-dose (or
dose if `useLogDose = FALSE`) on the logit scale, and
[`Quantiles2LogisticNormal()`](https://docs.crmpack.org/reference/Quantiles2LogisticNormal.md)
is used to transform the resulting quantiles into an approximating
[`LogisticNormal`](https://docs.crmpack.org/reference/LogisticNormal-class.md)
(or
[`LogisticLogNormal`](https://docs.crmpack.org/reference/LogisticLogNormal-class.md)
or
[`LogisticLogNormalSub`](https://docs.crmpack.org/reference/LogisticLogNormalSub-class.md))
model. Note that the reference dose is not required for these
computations.

## Usage

``` r
MinimalInformative(
  dosegrid,
  refDose,
  threshmin = 0.2,
  threshmax = 0.3,
  probmin = 0.05,
  probmax = 0.05,
  ...,
  useLogDose = TRUE
)
```

## Arguments

- dosegrid:

  (`numeric`)\
  the dose grid, only positive sorted values are allowed.

- refDose:

  (`number`)\
  the reference dose. Must be positive if `useLogDose = TRUE`.

- threshmin:

  (`number`)\
  any toxicity probability above this threshold would be very unlikely
  (see `probmin`) at the minimum dose.

- threshmax:

  (`number`)\
  any toxicity probability below this threshold would be very unlikely
  (see `probmax`) at the maximum dose.

- probmin:

  (`number`)\
  the prior probability of exceeding `threshmin` at the minimum dose.

- probmax:

  (`number`)\
  the prior probability of being below `threshmax` at the maximum dose.

- ...:

  additional arguments for computations, see
  [`Quantiles2LogisticNormal()`](https://docs.crmpack.org/reference/Quantiles2LogisticNormal.md),
  e.g. `refDose` and `logNormal=TRUE` to obtain a minimal informative
  log normal prior.

- useLogDose:

  (`flag`)\
  use `log(dosegrid / refDose)` as dose covariate? If `FALSE`, pass
  `logNormal = TRUE` via `...` to obtain a
  [`LogisticLogNormalSub`](https://docs.crmpack.org/reference/LogisticLogNormalSub-class.md)
  model.

## Value

See
[`Quantiles2LogisticNormal()`](https://docs.crmpack.org/reference/Quantiles2LogisticNormal.md).

## References

Neuenschwander B, Branson M, Gsponer T (2008). “Critical aspects of the
Bayesian approach to phase I cancer trials.” *Statistics in Medicine*,
**27**(13), 2420–2439.
<https://onlinelibrary.wiley.com/doi/10.1002/sim.3230>.

## Examples

``` r
# \donttest{
# Setting up a minimal informative prior 
# max.time is quite small only for the purpose of showing the example. They 
# should be increased for a real case.
set.seed(132)
coarseGrid <- c(0.1, 10, 30, 60, 100)
minInfModel <- MinimalInformative(dosegrid = coarseGrid,
                                  refDose=50,
                                  threshmin=0.2,
                                  threshmax=0.3,
                                  control=## for real case: leave out control 
                                    list(max.time=0.1)) 
#> It: 1, obj value (lsEnd): 0.6727662311 indTrace: 1
#> timeSpan = 4.424475 maxTime = 0.1
#> Emini is: 0.6727662311
#> xmini are:
#> 3.446289216 9.080650618 4.30874806 0.7251654219 -0.7565382708 
#> Totally it used 4.424507 secs
#> No. of function call is: 980

# Plotting the result
matplot(x=coarseGrid,
        y=minInfModel$required,
        type="b", pch=19, col="blue", lty=1,
        xlab="dose",
        ylab="prior probability of DLT")
matlines(x=coarseGrid,
         y=minInfModel$quantiles,
         type="b", pch=19, col="red", lty=1)
legend("right",
       legend=c("quantiles", "approximation"),
       col=c("blue", "red"),
       lty=1,
       bty="n")

# }
```
